--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<div class="container">
+    <app-welcome-screen></app-welcome-screen>
+    <app-header></app-header>
+    <app-continents></app-continents>
+</div>
