--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <app-welcome-screen></app-welcome-screen>
     <app-header></app-header>
     <app-continents></app-continents>
