--- a/src/app/welcome-screen/welcome-screen.component.html
+++ b/src/app/welcome-screen/welcome-screen.component.html
@@ -1,10 +1,10 @@
-<div class="welcome-section content-hidden" #welcomeScreen>
+<div class="welcome-section content-hidden">
   <div class="content-wrap">
     <ul class="fly-in-text">
       <li>Explore</li>
       <li>The</li>
       <li>World</li>
     </ul>
-    <a href="#" class="enter-btn" (click)="onEnter()">EXPLORE</a>
+    <a href="#" class="enter-btn" toggleWelcomeScreen>EXPLORE</a>
   </div>
 </div>
