--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Kanit|Russo+One');
+body{
+    background-color: #000;
+    background-size: cover;
+    background-position: 10%;
+    font-family: 'Kanit', sans-serif;
+    font-size: 16px;
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Russo One', sans-serif;
+}
