--- a/src/app/welcome-screen/welcome-screen.component.html
+++ b/src/app/welcome-screen/welcome-screen.component.html
@@ -5,6 +5,6 @@
       <li>The</li>
       <li>World</li>
     </ul>
-    <a href="#" class="enter-btn" toggleWelcomeScreen>EXPLORE</a>
+    <a class="enter-btn" toggleWelcomeScreen>EXPLORE</a>
   </div>
 </div>
