--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
+
 <main class="container countries" appMatchHeight="card">
-    <div class="row">
+    <app-filter-bar class="col-lg-2"></app-filter-bar>
+    <div class="row col-lg-10">
         <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 country" *ngFor="let country of countries">
             <div class="card">
                 <ul class="list-group">
@@ -29,7 +31,8 @@
                             </li>
                         </ul>
                     </li>
-                </ul>        
+                </ul>
+                <a class="filter-btn more">More</a>      
             </div>
         </div>
     </div>
