--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main class="container countries" appMatchHeight="card">
+<main class="container-fluid countries" appMatchHeight="card">
     <app-filter-bar class="col-lg-2"></app-filter-bar>
     <div class="row col-lg-10">
         <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 country" *ngFor="let country of countries">
@@ -14,6 +14,12 @@
                     </li>
                     <li class="list-group-item">
                         <strong>Capital: </strong> {{ country.capital }}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Region: </strong> {{ country.region }}
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Population: </strong> {{ country.population }}
                     </li>
                     <li class="list-group-item">
                         <strong>Languages:</strong>
