--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Kanit|Russo+One');
 body{
-    background-color: #000;
+    background-color: #fff;
     background-size: cover;
     background-position: 10%;
     font-family: 'Kanit', sans-serif;
