--- a/src/app/welcome-screen/welcome-screen.component.html
+++ b/src/app/welcome-screen/welcome-screen.component.html
@@ -5,6 +5,7 @@
       <li>The</li>
       <li>World</li>
     </ul>
+    <!-- toggleWelcomeScreen is a directive which handles the click event of btn and add/remove styles to welcome-section -->
     <a class="enter-btn" toggleWelcomeScreen>EXPLORE</a>
   </div>
 </div>
