--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,10 +1,17 @@
+<!-- Header component -->
 <app-header></app-header>
 
+<!-- Loading spinner -->
+<ngx-spinner type="timer" size="large"></ngx-spinner>
+
+<!-- Main section -->
 <main class="container-fluid countries" appMatchHeight="card">
+    <!-- Filters panel component -->
     <app-filter-bar class="col-lg-2"></app-filter-bar>
+    <!-- Countries section -->
     <div class="row col-lg-10">
         <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 country" *ngFor="let country of countries">
-            <div class="card">
+            <div class="card" [ngClass]="country.region|lowercase">
                 <ul class="list-group">
                     <li class="list-group-item">
                         <img class="img-thumbnail" [src]="country.flag">
@@ -25,7 +32,7 @@
                         <strong>Languages:</strong>
                         <ul class="list-group languages">
                             <li class="list-group-item" *ngFor="let language of country.languages">
-                                <a class="filter-btn">{{ language.name }}</a>
+                                <a class="filter-btn" [routerLink]="['/countries']" [queryParams]="{'language':language.iso639_1}">{{ language.name }}</a>
                             </li>
                         </ul>
                     </li>
@@ -33,12 +40,12 @@
                         <strong>Currencies:</strong>
                         <ul class="list-group currencies">
                             <li class="list-group-item" *ngFor="let currency of country.currencies">
-                                <a class="filter-btn">{{ currency.name }}</a>
+                                <a class="filter-btn" [routerLink]="['/countries']" [queryParams]="{'currency':currency.code}">{{ currency.name }}</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
-                <a class="filter-btn more">More</a>      
+                <a class="filter-btn more" [routerLink]="['/country']" [queryParams]="{'country':country.name}">More</a>      
             </div>
         </div>
     </div>
