--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -10,6 +10,7 @@
     <app-filter-bar class="col-lg-2"></app-filter-bar>
     <!-- Countries section -->
     <div class="row col-lg-10">
+        <h2>{{ pageTitle }}</h2>
         <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 country" *ngFor="let country of countries">
             <div class="card" [ngClass]="country.region|lowercase">
                 <ul class="list-group">
@@ -32,7 +33,7 @@
                         <strong>Languages:</strong>
                         <ul class="list-group languages">
                             <li class="list-group-item" *ngFor="let language of country.languages">
-                                <a class="filter-btn" [routerLink]="['/countries']" [queryParams]="{'language':language.iso639_1}">{{ language.name }}</a>
+                                <a class="filter-btn" (click)="onLanguageFilterClick(language)">{{ language.name }}</a>
                             </li>
                         </ul>
                     </li>
@@ -40,7 +41,7 @@
                         <strong>Currencies:</strong>
                         <ul class="list-group currencies">
                             <li class="list-group-item" *ngFor="let currency of country.currencies">
-                                <a class="filter-btn" [routerLink]="['/countries']" [queryParams]="{'currency':currency.code}">{{ currency.name }}</a>
+                                <a class="filter-btn" (click)="onCurrencyFilterClick(currency)">{{ currency.name }}</a>
                             </li>
                         </ul>
                     </li>
