--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,13 +3,14 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
+      <a class="navbar-brand navbar-right" routerLink="/">World Map</a>
+      <a class="back-btn" (click)="onGoBackClick($event)"><span><</span>Back</a>
       <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-        <a class="navbar-brand" routerLink="/">World Map</a>
       </div>
     </div>
   </nav>
