--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -7,11 +7,14 @@
 <!-- Main section -->
 <main class="container-fluid countries" appMatchHeight="card">
     <!-- Filters panel component -->
-    <app-filter-bar class="col-lg-2"></app-filter-bar>
+    <app-filter-bar class="col-lg-2 col-md-2 col-sm-2 col-xs-12"></app-filter-bar>
     <!-- Countries section -->
-    <div class="row col-lg-10">
+    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 countries-section">
         <h2>{{ pageTitle }}</h2>
-        <div class="col-xs-1 col-sm-2 col-md-4 col-lg-4 country" *ngFor="let country of countries">
+        <hr>
+        <input type="text" placeholder="Search by name" [(ngModel)]="searchedName">
+        <hr>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 country" *ngFor="let country of countries | searchByName:searchedName:'name'">
             <div class="card" [ngClass]="country.region|lowercase">
                 <ul class="list-group">
                     <li class="list-group-item">
