--- a/src/app/continents/continents.component.html
+++ b/src/app/continents/continents.component.html
@@ -1,5 +1,7 @@
-    <!-- CSSMap - Continents -->
-    <div id="map-continents">
-        <div id="regions_div"></div>
-    </div>
-    <!-- END OF THE CSSMap - Continents -->
+<ngx-spinner type="timer" size="large"></ngx-spinner>
+
+<!-- CSSMap - Continents -->
+<div id="map-continents">
+    <div id="regions_div"></div>
+</div>
+<!-- END OF THE CSSMap - Continents -->
