--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -9,7 +9,7 @@
         <h1>{{ country?.name }}</h1>
         <img class="img-responsive" src="{{ country?.flag }}">
 
-        <div class="details">
+        <div class="details col-xs-12">
             <div class="detail-1">
                 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#geography">Geography</button>
                 <div class="accordion-1 collapse in" id='geography'>
