--- a/src/app/continents/continents.component.css
+++ b/src/app/continents/continents.component.css
@@ -3,3 +3,9 @@
     height: 550px;
     padding-top: 80px;
 }
+@media screen and (max-width:768px){
+    #regions_div{
+        width:700px;
+        height:700px;
+    }
+}
