--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -60,13 +60,14 @@ h3{
     padding: .5em 2em;
     border-radius: 5px;
     font-size: 1em;
-    border: none;
+    border: 2px solid #000;
     margin: 0 0 1em 0;
     color: #000;
-    background: #07d407da;
+    background: transparent;
 }
 .card .filter-btn.more:hover{
-    background: #03fc41;
+    background: #000;
+    color: #fff;
 }
 input[type='text'] {
     width: 100%;
