--- a/src/app/filter-bar/filter-bar.component.css
+++ b/src/app/filter-bar/filter-bar.component.css
@@ -13,9 +13,125 @@
     margin-bottom: 3em;
     display: block;
 }
+/* Checkbox styling */
+.filter-regions .checkbox label{
+    display: block;
+    position: relative;
+    padding-left: 60px;
+    color: #000;
+    margin: 5px 0;
+}
+.filter-regions .checkbox label div {
+    display: inline-block;
+    width: 45px;
+    height: 24px;
+    position: absolute;
+    top: -1px;
+    left: 0px;
+    border-radius: 1em;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    transition: background-color .3s;
+}
+.filter-regions .checkbox label div::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 2px;
+    left: 3px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,.3);
+    transition: left .3s;
+}
+.filter-regions .checkbox label input:checked + div{
+    border-color: #fff;
+    background-color: rgb(0,200,0);
+
+}
+.filter-regions .checkbox label input:checked ~ span{
+    color: #000;
+}
+.filter-regions .checkbox label input:checked + div::after{
+    left: calc( 100% - 20px );
+    background-color: #fff;
+}
+.filter-regions .checkbox label input{
+    display: none;
+}
+/* Radio buttons styling */
+.radio{
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+}
+.radio input{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.radio span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+.radio:hover input ~ span{
+    background-color: #888;
+}
+
+.radio input:checked ~ span{
+    background-color: rgb(0,200,0);;
+}
+
+span:after{
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.radio input:checked ~ span:after{
+    display: block;
+}
+
+.radio span:after{
+    top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
 
 @media screen and (max-width:767px){
     .filter-regions{
         display: none;
+    }
+    .radio span{
+        height: 20px;
+        width: 20px;
+    }
+    .radio span:after{
+        top: 6px;
+        left: 6px;
+    }
+    .radio label{
+        padding-left: 2px;
+    }
+}
+@media screen and (max-width:767px) and (min-width:400px){
+    .filter-panel{
+        max-width: 75%;
+        margin: 0 auto;
+    }
+    .filter-regions{
+        width:100%;
     }
 }
